main/objects/Account.object
<CustomObject>
   <fields>
      <fullName>Active__c</fullName>
      <label>Active</label>
      <type>Picklist</type>
      <valueSet>
         <valueSetDefinition>
            <value>
               <fullName>No</fullName>
            </value>
            <value>
               <fullName>Yes</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>CustomerPriority__c</fullName>
      <label>Customer Priority</label>
      <type>Picklist</type>
      <valueSet>
         <valueSetDefinition>
            <value>
               <fullName>High</fullName>
            </value>
            <value>
               <fullName>Low</fullName>
            </value>
            <value>
               <fullName>Medium</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>FD_External_ID__c</fullName>
      <externalId>true</externalId>
      <label>FD External ID</label>
      <length>30</length>
      <type>Text</type>
      <unique>true</unique>
   </fields>
   <fields>
      <fullName>File_Status__c</fullName>
      <label>File Status</label>
      <type>Picklist</type>
      <valueSet>
         <restricted>true</restricted>
         <valueSetDefinition>
            <value>
               <fullName>SUCCESS</fullName>
               <default>true</default>
               <label>SUCCESS</label>
            </value>
            <value>
               <fullName>FAILED</fullName>
            </value>
            <value>
               <fullName>DELETED</fullName>
            </value>
            <value>
               <fullName>NOT ATTEMPTED</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>NumberofLocations__c</fullName>
      <label>Number of Locations</label>
      <precision>3</precision>
      <scale>0</scale>
      <type>Number</type>
   </fields>
   <fields>
      <fullName>SLAExpirationDate__c</fullName>
      <label>SLA Expiration Date</label>
      <type>Date</type>
   </fields>
   <fields>
      <fullName>SLASerialNumber__c</fullName>
      <label>SLA Serial Number</label>
      <length>10</length>
      <type>Text</type>
   </fields>
   <fields>
      <fullName>SLA__c</fullName>
      <label>SLA</label>
      <type>Picklist</type>
      <valueSet>
         <valueSetDefinition>
            <value>
               <fullName>Gold</fullName>
            </value>
            <value>
               <fullName>Silver</fullName>
            </value>
            <value>
               <fullName>Platinum</fullName>
            </value>
            <value>
               <fullName>Bronze</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>UpsellOpportunity__c</fullName>
      <label>Upsell Opportunity</label>
      <type>Picklist</type>
      <valueSet>
         <valueSetDefinition>
            <value>
               <fullName>Maybe</fullName>
            </value>
            <value>
               <fullName>No</fullName>
            </value>
            <value>
               <fullName>Yes</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>Source_Code__c</fullName>
      <label>Source Code</label>
      <length>10</length>
      <type>Text</type>
   </fields>
   <listViews>
      <fullName>AllAccounts</fullName>
      <columns>ACCOUNT.NAME</columns>
      <columns>ACCOUNT.SITE</columns>
      <columns>ACCOUNT.PHONE1</columns>
      <columns>ACCOUNT.TYPE</columns>
      <columns>FD_External_ID__c</columns>
      <filterScope>Everything</filterScope>
      <label>All Accounts</label>
   </listViews>
   <listViews>
      <fullName>MyAccounts</fullName>
      <filterScope>Mine</filterScope>
      <label>My Accounts</label>
   </listViews>
   <listViews>
      <fullName>NewLastWeek</fullName>
      <filterScope>Everything</filterScope>
      <filters>
         <field>ACCOUNT.CREATED_DATE</field>
         <operation>equals</operation>
         <value>LAST_WEEK</value>
      </filters>
      <label>New Last Week</label>
   </listViews>
   <listViews>
      <fullName>NewThisWeek</fullName>
      <filterScope>Everything</filterScope>
      <filters>
         <field>ACCOUNT.CREATED_DATE</field>
         <operation>equals</operation>
         <value>THIS_WEEK</value>
      </filters>
      <label>New This Week</label>
   </listViews>
   <listViews>
      <fullName>PlatinumandGoldSLACustomers</fullName>
      <columns>ACCOUNT.NAME</columns>
      <columns>ACCOUNT.SITE</columns>
      <columns>ACCOUNT.ADDRESS1_STATE</columns>
      <columns>ACCOUNT.PHONE1</columns>
      <columns>CORE.USERS.ALIAS</columns>
      <filterScope>Everything</filterScope>
      <label>Platinum and Gold SLA Customers</label>
   </listViews>
   <recordTypes>
      <fullName>HDFC</fullName>
      <active>true</active>
      <label>HDFC</label>
   </recordTypes>
   <recordTypes>
      <fullName>SBI</fullName>
      <active>true</active>
      <label>SBI</label>
   </recordTypes>
   <sharingModel>ReadWrite</sharingModel>
   <validationRules>
      <fullName>Source_Code_Required</fullName>
      <active>true</active>
      <errorConditionFormula>LEN(Source_Code__c) &lt; 10</errorConditionFormula>
      <errorDisplayField>Source_Code__c</errorDisplayField>
      <errorMessage>Enter Valid Code</errorMessage>
   </validationRules>
</CustomObject>